Latest build position fix and jira Alignment fix

--- a/Hygieia_UI/UI/src/app/css/dashboardCSS.less
+++ b/Hygieia_UI/UI/src/app/css/dashboardCSS.less
@@ -514,3 +514,9 @@ body {
 input.middle:focus {
     border:1px solid #66afe9;
 }
+.text-standard-date{
+    margin-left:1em !important;
+}
+.build-view .build-chevron{
+    margin-right:3.2em !important;
+}
