--- a/Hygieia_UI/UI/src/components/widgets/feature/jiraView.less
+++ b/Hygieia_UI/UI/src/components/widgets/feature/jiraView.less
@@ -68,3 +68,6 @@
     padding-top:16%;
     margin-bottom:10px;
 }
+.custom-td-width-defect{
+    width:21% !important;
+}
